RESOLVED FIXED132736
REGRESSION(CMAKE): [GTK] run-gtk-tests doesn't set the right injected bundle path
https://bugs.webkit.org/show_bug.cgi?id=132736
Summary REGRESSION(CMAKE): [GTK] run-gtk-tests doesn't set the right injected bundle ...
Carlos Garcia Campos
Reported 2014-05-09 04:27:32 PDT
There are two problems, the path returned by common.library_build_path() is wrong when common.binary_build_path() has previously been called, and the test is still looking for the .la instead of .so
Attachments
Patch (2.69 KB, patch)
2014-05-09 04:32 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-05-09 04:32:36 PDT
Created attachment 231142 [details] Patch This doesn't fail in the bots, because bots have never run these tests since the CMAKE switch, see bug #132684
Carlos Garcia Campos
Comment 2 2014-05-09 05:50:33 PDT
Note You need to log in before you can comment on or make changes to this bug.